fix: change gap of content-not-only to 0

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -67,7 +67,7 @@ header {
 	display: flex;
 	flex-wrap: wrap;
 	align-content: space-evenly;
-	gap: 50px;
+	gap: 0;
 	flex-shrink: 1;
 }
 
